--- a/Algorhythm/Base.lproj/Main.storyboard
+++ b/Algorhythm/Base.lproj/Main.storyboard
@@ -1,25 +1,189 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="z8n-ZH-08N">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Playlist-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="PlaylistMasterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="tvu-uA-i1m">
+                                <rect key="frame" x="60" y="184" width="200" height="200"/>
+                                <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="CeK-wV-r1L"/>
+                                    <constraint firstAttribute="height" constant="200" id="ulX-RQ-v6K"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1764705882352941" green="0.18431372549019609" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="tvu-uA-i1m" secondAttribute="centerX" id="kGF-2W-bha"/>
+                            <constraint firstAttribute="centerY" secondItem="tvu-uA-i1m" secondAttribute="centerY" id="pQk-7O-vGB"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="vIm-jl-7M0" appends="YES" id="dZm-S4-D2U"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" title="Playlist" id="JR6-zr-nqI"/>
+                    <connections>
+                        <outlet property="playlistImageView0" destination="tvu-uA-i1m" id="Eom-Y1-IjY"/>
+                        <segue destination="iBe-P1-cLD" kind="push" identifier="showPlaylistDetail" id="Xxh-e4-cRO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="vIm-jl-7M0">
+                    <connections>
+                        <action selector="showPlaylistDetail:" destination="vXZ-lx-hvc" id="baz-HN-38H"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="833" y="406"/>
+        </scene>
+        <!--Artist-->
+        <scene sceneID="zaN-Ju-CMx">
+            <objects>
+                <viewController id="iBe-P1-cLD" customClass="PlaylistDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3e8-he-qwe"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Hp-Ck-5Nk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gGe-l8-vVi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5La-db-mBg">
+                                <rect key="frame" x="0.0" y="64" width="320" height="290"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5La-db-mBg" secondAttribute="height" multiplier="32:29" id="QiC-Dj-dJa"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3tY-og-Yo8">
+                                <rect key="frame" x="0.0" y="264" width="320" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title goes here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXe-L5-SJd">
+                                        <rect key="frame" x="20" y="10" width="113" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNF-bm-4v9">
+                                        <rect key="frame" x="20" y="39" width="280" height="43"/>
+                                        <string key="text">This is a collection of my favorite songs to listen to when working out. It's got everything from fast cardio to power workout tunes. All the right fuel to get your engine going.</string>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.29999999999999999" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="QNF-bm-4v9" secondAttribute="trailing" constant="20" id="6Cs-DS-69C"/>
+                                    <constraint firstAttribute="width" secondItem="3tY-og-Yo8" secondAttribute="height" multiplier="32:9" id="V76-C2-fwY"/>
+                                    <constraint firstItem="gXe-L5-SJd" firstAttribute="leading" secondItem="3tY-og-Yo8" secondAttribute="leading" constant="20" id="XSQ-qe-nbh"/>
+                                    <constraint firstItem="gXe-L5-SJd" firstAttribute="top" secondItem="3tY-og-Yo8" secondAttribute="top" constant="10" id="bmM-x1-u57"/>
+                                    <constraint firstItem="QNF-bm-4v9" firstAttribute="leading" secondItem="3tY-og-Yo8" secondAttribute="leading" constant="20" id="nDb-1L-Jks"/>
+                                    <constraint firstItem="QNF-bm-4v9" firstAttribute="top" secondItem="gXe-L5-SJd" secondAttribute="bottom" constant="8" id="wUA-o4-URa"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIU-JN-CKb">
+                                <rect key="frame" x="16" y="374" width="38" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Number 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QK-8t-knh">
+                                <rect key="frame" x="16" y="428" width="96" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Number 2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccu-tY-0aC">
+                                <rect key="frame" x="16" y="453" width="96" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Number 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uzF-O3-Sse">
+                                <rect key="frame" x="16" y="403" width="96" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="5La-db-mBg" secondAttribute="trailing" id="0K4-nl-K6a"/>
+                            <constraint firstItem="5La-db-mBg" firstAttribute="top" secondItem="3e8-he-qwe" secondAttribute="bottom" id="2vr-gH-AcE"/>
+                            <constraint firstItem="9QK-8t-knh" firstAttribute="top" secondItem="uzF-O3-Sse" secondAttribute="bottom" constant="8" id="6Dy-lz-6a1"/>
+                            <constraint firstItem="uzF-O3-Sse" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" constant="16" id="I1b-p9-Lvc"/>
+                            <constraint firstItem="3tY-og-Yo8" firstAttribute="bottom" secondItem="5La-db-mBg" secondAttribute="bottom" id="IEK-lw-PFO"/>
+                            <constraint firstItem="5La-db-mBg" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" id="MjX-Tj-rne"/>
+                            <constraint firstItem="UIU-JN-CKb" firstAttribute="top" secondItem="3tY-og-Yo8" secondAttribute="bottom" constant="20" id="SyM-CL-fxy"/>
+                            <constraint firstItem="ccu-tY-0aC" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" constant="16" id="Tj1-w0-NEj"/>
+                            <constraint firstItem="uzF-O3-Sse" firstAttribute="top" secondItem="UIU-JN-CKb" secondAttribute="bottom" constant="8" id="bzu-4P-Pqq"/>
+                            <constraint firstItem="9QK-8t-knh" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" constant="16" id="cCc-ww-f0z"/>
+                            <constraint firstItem="UIU-JN-CKb" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" constant="16" id="dj3-He-6gJ"/>
+                            <constraint firstItem="ccu-tY-0aC" firstAttribute="top" secondItem="9QK-8t-knh" secondAttribute="bottom" constant="8" id="dkj-us-E4l"/>
+                            <constraint firstItem="9QK-8t-knh" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" constant="16" id="ffr-8o-OKR"/>
+                            <constraint firstItem="3tY-og-Yo8" firstAttribute="leading" secondItem="gGe-l8-vVi" secondAttribute="leading" id="ocY-TI-SnF"/>
+                            <constraint firstAttribute="trailing" secondItem="3tY-og-Yo8" secondAttribute="trailing" id="veg-oF-wlM"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Artist" id="fxZ-xg-SLK"/>
+                    <connections>
+                        <outlet property="playlistArtist0" destination="uzF-O3-Sse" id="gMa-yU-19q"/>
+                        <outlet property="playlistArtist1" destination="9QK-8t-knh" id="kCs-Lc-k6S"/>
+                        <outlet property="playlistArtist2" destination="ccu-tY-0aC" id="9lV-sm-2aW"/>
+                        <outlet property="playlistCoverImage" destination="5La-db-mBg" id="flT-cA-g1r"/>
+                        <outlet property="playlistDescription" destination="QNF-bm-4v9" id="fNo-Zb-hjn"/>
+                        <outlet property="playlistTitle" destination="gXe-L5-SJd" id="vBX-Vw-d0S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tVZ-RK-jbu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1263" y="406"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ct8-OV-PAF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="z8n-ZH-08N" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="O9h-HU-DF2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="4hP-E4-X67"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cv9-2m-bd2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="301" y="406"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="66" height="73"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
